# PS2-Egg-Library

./: CMakeLists.txt  PS2LevelEditingToolsLibrary.Build.cs
include/egg/: asset.hpp  filesystem.hpp  hashing.hpp  hashmap.hpp  level.hpp  math_types.hpp  mesh_header.hpp  serialization.hpp
src/: asset.cc  egg.cpp  filesystem.cc
